// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deep enforcements Should match a failing snapshot 1`] = `
RuleResult {
  "children": Object {
    "age": RuleResult {
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
      "warn": false,
    },
    "country": RuleResult {
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
      "warn": false,
    },
    "user": RuleResult {
      "failed": true,
      "hasErrors": true,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;

exports[`Deep enforcements Should match a partially failing shapshot 1`] = `
RuleResult {
  "children": Object {
    "age": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "warn": false,
    },
    "country": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "warn": false,
    },
    "user": RuleResult {
      "children": Object {
        "id": RuleResult {
          "failed": true,
          "hasErrors": true,
          "hasWarnings": false,
          "warn": false,
        },
        "name": RuleResult {
          "children": Object {
            "first": RuleResult {
              "failed": true,
              "hasErrors": true,
              "hasWarnings": false,
              "warn": false,
            },
            "last": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "warn": false,
            },
            "middle": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "warn": false,
            },
          },
          "failed": true,
          "hasErrors": true,
          "hasWarnings": false,
        },
      },
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;

exports[`Deep enforcements Should match sucessful shapshot 1`] = `
RuleResult {
  "children": Object {
    "age": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "warn": false,
    },
    "country": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "warn": false,
    },
    "user": RuleResult {
      "children": Object {
        "id": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "name": RuleResult {
          "children": Object {
            "first": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "warn": false,
            },
            "last": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "warn": false,
            },
            "middle": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
      },
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
    },
  },
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
}
`;
